generated-tests/tests/snapshots/ts/typescript__test_generated_for_in_statement.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
for (const key in obj) { console.log(key); }

AST:
(program
  (for_in_statement
    (identifier key)
    (identifier obj)
    (statement_block
      (expression_statement
        (call_expression
          (member_expression
            (identifier console)
            (property_identifier)
          )
          (arguments
            (identifier key)
          )
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "key",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 12,
            end_line: 1,
            end_column: 15,
        },
        SerializableUsage {
            name: "obj",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 19,
            end_line: 1,
            end_column: 22,
        },
        SerializableUsage {
            name: "console.log(key)",
            kind: CallExpression,
            scope: None,
            start_line: 1,
            start_column: 26,
            end_line: 1,
            end_column: 42,
        },
        SerializableUsage {
            name: "console",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 26,
            end_line: 1,
            end_column: 33,
        },
        SerializableUsage {
            name: "log",
            kind: FieldExpression,
            scope: None,
            start_line: 1,
            start_column: 34,
            end_line: 1,
            end_column: 37,
        },
        SerializableUsage {
            name: "key",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 38,
            end_line: 1,
            end_column: 41,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
