generated-tests/tests/snapshots/ts/typescript__test_generated_for_statement.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
for (let i1 = 0; i1 < arr1.length; i1++) { const item = arr1[i1]; }

AST:
(program
  (for_statement
    (lexical_declaration
      (variable_declarator
        (identifier i1)
        (number)
      )
    )
    (expression_statement
      (binary_expression
        (identifier i1)
        (member_expression
          (identifier arr1)
          (property_identifier)
        )
      )
    )
    (update_expression
      (identifier i1)
    )
    (statement_block
      (lexical_declaration
        (variable_declarator
          (identifier item)
          (subscript_expression
            (identifier arr1)
            (identifier i1)
          )
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "i1",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
        Definition {
            name: "item",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "i1",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 10,
            end_line: 1,
            end_column: 12,
        },
        SerializableUsage {
            name: "i1",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 18,
            end_line: 1,
            end_column: 20,
        },
        SerializableUsage {
            name: "arr1",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 23,
            end_line: 1,
            end_column: 27,
        },
        SerializableUsage {
            name: "length",
            kind: FieldExpression,
            scope: None,
            start_line: 1,
            start_column: 28,
            end_line: 1,
            end_column: 34,
        },
        SerializableUsage {
            name: "i1",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 36,
            end_line: 1,
            end_column: 38,
        },
        SerializableUsage {
            name: "item",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 50,
            end_line: 1,
            end_column: 54,
        },
        SerializableUsage {
            name: "arr1",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 57,
            end_line: 1,
            end_column: 61,
        },
        SerializableUsage {
            name: "i1",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 62,
            end_line: 1,
            end_column: 64,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
